readme html is showing up now!

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -2,3 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Your custom styles for @html content with parent div class renderedHTML */
+.renderedHTML h1 {
+  @apply text-2xl;
+}
+.renderedHTML h2 {
+  @apply text-xl;
+}
