--- a/src/app.postcss
+++ b/src/app.postcss
@@ -5,8 +5,29 @@
 
 /* Your custom styles for @html content with parent div class renderedHTML */
 .renderedHTML h1 {
+  @apply text-4xl;
+  @apply text-center;
+  @apply pb-10;
+}
+
+.renderedHTML h2 {
+  @apply text-3xl;
+}
+
+.renderedHTML h3 {
   @apply text-2xl;
 }
-.renderedHTML h2 {
+
+.renderedHTML h4 {
   @apply text-xl;
+}
+
+.renderedHTML p {
+  @apply pb-10;
+}
+
+/* Custom styles to center images */
+.renderedHTML img {
+  display: block;
+  margin: 0 auto;
 }
