moving code into src directory for better code organization

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,7 +12,7 @@
     <!-- Include header component -->
     {% include 'components/header.html' %}
 
-    <h1 id="content">Hello, htmx!</h1>
+    <h1 id="content">Hello, Jensen!</h1>
 
     <!-- Include footer component -->
     {% include 'components/footer.html' %}
